Fixing html and css for tables that are too long now display a scroll bar

--- a/css/main.css
+++ b/css/main.css
@@ -55,3 +55,10 @@
     width: 4em !important;
     margin: 5px !important;
 }
+
+.main-content {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+}
